--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 .idea/**/shelf
 
 2022-05-27_cosmos-univ-with-factors_with-finval_global_monthly.csv
+2022-06-09_cosmos-univ-with-factors_with-finval_global_monthly.csv
 data/
 
 
