--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 2022-05-27_cosmos-univ-with-factors_with-finval_global_monthly.csv
 2022-06-09_cosmos-univ-with-factors_with-finval_global_monthly.csv
 data/
-
+etc/
 
 # AWS User-specific
 .idea/**/aws.xml
